--- a/style.css
+++ b/style.css
@@ -69,12 +69,18 @@
    border-radius: 4px;
    padding: 5px 12px;
    border: none;
+   cursor: pointer;
+   margin-left: 10px;
+}
+
+.btn:hover,
+.btn:focus {
+    color: #ffff;
+    transform: scale(1.2);
 }
 
 .startBtn {
-    background-color: #6eb288;
-    margin-right: 10px;
-}
+    background-color: #6eb288;}
 
 .stopBtn {
     background-color: #d22e4a;
